--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 // runtimeOnly porque solo lo necesitamos en tiempo de ejecución
 	runtimeOnly 'org.postgresql:postgresql'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 }
 
 tasks.named('test') {
